// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cross renders with default values 1`] = `
<body>
  <div>
    <path
      d="M 0.16666666666666666,0.16666666666666666 L 0.16666666666666666,0.5 -0.16666666666666666,0.5 -0.16666666666666666,0.16666666666666666 -0.5,0.16666666666666666 -0.5,-0.16666666666666666 -0.16666666666666666,-0.16666666666666666 -0.16666666666666666,-0.5 0.16666666666666666,-0.5 0.16666666666666666,-0.16666666666666666 0.5,-0.16666666666666666 0.5,0.16666666666666666 Z"
    />
  </div>
</body>
`;

exports[`Cross renders with the given parameters 1`] = `
<body>
  <div>
    <path
      d="M 104.57531754730549,167.07531754730547 L 98.32531754730549,177.90063509461098 76.67468245269453,165.40063509461098 82.92468245269451,154.57531754730547 50.44872981077806,135.82531754730547 62.94872981077806,114.17468245269453 95.42468245269451,132.92468245269453 101.67468245269451,122.09936490538902 123.32531754730547,134.59936490538902 117.07531754730549,145.42468245269453 149.55127018922195,164.17468245269453 137.05127018922195,185.82531754730547 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`Cross updates when the parameter cx is modified 1`] = `
<body>
  <div>
    <path
      d="M 44.57531754730549,167.07531754730547 L 38.32531754730549,177.90063509461098 16.67468245269452,165.40063509461098 22.924682452694515,154.57531754730547 -9.551270189221938,135.82531754730547 2.9487298107780617,114.17468245269453 35.42468245269451,132.92468245269453 41.67468245269451,122.09936490538902 63.32531754730548,134.59936490538902 57.07531754730549,145.42468245269453 89.55127018922194,164.17468245269453 77.05127018922194,185.82531754730547 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`Cross updates when the parameter cy is modified 1`] = `
<body>
  <div>
    <path
      d="M 104.57531754730549,57.07531754730549 L 98.32531754730549,67.90063509461098 76.67468245269453,55.40063509461097 82.92468245269451,44.57531754730549 50.44872981077806,25.825317547305488 62.94872981077806,4.174682452694519 95.42468245269451,22.924682452694515 101.67468245269451,12.09936490538903 123.32531754730547,24.59936490538903 117.07531754730549,35.42468245269451 149.55127018922195,54.17468245269451 137.05127018922195,75.82531754730547 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`Cross updates when the parameter fill is modified 1`] = `
<body>
  <div>
    <path
      d="M 104.57531754730549,167.07531754730547 L 98.32531754730549,177.90063509461098 76.67468245269453,165.40063509461098 82.92468245269451,154.57531754730547 50.44872981077806,135.82531754730547 62.94872981077806,114.17468245269453 95.42468245269451,132.92468245269453 101.67468245269451,122.09936490538902 123.32531754730547,134.59936490538902 117.07531754730549,145.42468245269453 149.55127018922195,164.17468245269453 137.05127018922195,185.82531754730547 Z"
      fill="blue"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`Cross updates when the parameter height is modified 1`] = `
<body>
  <div>
    <path
      d="M 104.57531754730549,167.07531754730547 L 98.32531754730549,177.90063509461098 76.67468245269453,165.40063509461098 82.92468245269451,154.57531754730547 50.44872981077806,135.82531754730547 62.94872981077806,114.17468245269453 95.42468245269451,132.92468245269453 101.67468245269451,122.09936490538902 123.32531754730547,134.59936490538902 117.07531754730549,145.42468245269453 149.55127018922195,164.17468245269453 137.05127018922195,185.82531754730547 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`Cross updates when the parameter rotation is modified 1`] = `
<body>
  <div>
    <path
      d="M 95.42468245269453,167.07531754730547 L 84.59936490538904,173.32531754730547 72.09936490538902,151.67468245269453 82.92468245269451,145.42468245269453 64.17468245269451,112.94872981077808 85.82531754730547,100.44872981077808 104.57531754730547,132.92468245269453 115.40063509461096,126.67468245269451 127.90063509461098,148.32531754730547 117.07531754730549,154.57531754730547 135.82531754730547,187.05127018922192 114.17468245269453,199.55127018922192 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`Cross updates when the parameter stroke is modified 1`] = `
<body>
  <div>
    <path
      d="M 104.57531754730549,167.07531754730547 L 98.32531754730549,177.90063509461098 76.67468245269453,165.40063509461098 82.92468245269451,154.57531754730547 50.44872981077806,135.82531754730547 62.94872981077806,114.17468245269453 95.42468245269451,132.92468245269453 101.67468245269451,122.09936490538902 123.32531754730547,134.59936490538902 117.07531754730549,145.42468245269453 149.55127018922195,164.17468245269453 137.05127018922195,185.82531754730547 Z"
      fill="red"
      stroke="blue"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`Cross updates when the parameter stroke-width is modified 1`] = `
<body>
  <div>
    <path
      d="M 104.57531754730549,167.07531754730547 L 98.32531754730549,177.90063509461098 76.67468245269453,165.40063509461098 82.92468245269451,154.57531754730547 50.44872981077806,135.82531754730547 62.94872981077806,114.17468245269453 95.42468245269451,132.92468245269453 101.67468245269451,122.09936490538902 123.32531754730547,134.59936490538902 117.07531754730549,145.42468245269453 149.55127018922195,164.17468245269453 137.05127018922195,185.82531754730547 Z"
      fill="red"
      stroke-width="3"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`Cross updates when the parameter thickness is modified 1`] = `
<body>
  <div>
    <path
      d="M 109.15063509461098,184.15063509461098 L 65.84936490538902,159.15063509461098 44.19872981077806,146.65063509461098 69.19872981077806,103.34936490538904 90.84936490538902,115.84936490538902 134.15063509461098,140.84936490538902 155.80127018922195,153.34936490538902 130.80127018922195,196.65063509461095 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`Cross updates when the parameter transform is modified 1`] = `
<body>
  <div>
    <path
      d="M 104.57531754730549,167.07531754730547 L 98.32531754730549,177.90063509461098 76.67468245269453,165.40063509461098 82.92468245269451,154.57531754730547 50.44872981077806,135.82531754730547 62.94872981077806,114.17468245269453 95.42468245269451,132.92468245269453 101.67468245269451,122.09936490538902 123.32531754730547,134.59936490538902 117.07531754730549,145.42468245269453 149.55127018922195,164.17468245269453 137.05127018922195,185.82531754730547 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(180)"
    />
  </div>
</body>
`;

exports[`Cross updates when the parameter width is modified 1`] = `
<body>
  <div>
    <path
      d="M 104.57531754730549,167.07531754730547 L 98.32531754730549,177.90063509461098 76.67468245269453,165.40063509461098 82.92468245269451,154.57531754730547 72.09936490538902,148.32531754730547 84.59936490538902,126.67468245269453 95.42468245269451,132.92468245269453 101.67468245269451,122.09936490538902 123.32531754730547,134.59936490538902 117.07531754730549,145.42468245269453 127.90063509461098,151.67468245269453 115.40063509461098,173.32531754730547 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;
